artifactory-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: artifactory
  labels:
    app: artifactory
    chart: artifactory-107.38.10
    component: artifactory
    heritage: Helm
    release: artifactory
spec:
  serviceName: artifactory
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: artifactory
      role: artifactory
      release: artifactory
  template:
    metadata:
      labels:
        app: artifactory
        chart: artifactory-107.38.10
        heritage: Helm
        role: artifactory
        component: artifactory
        release: artifactory
      annotations:
        checksum/database-secrets: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/binarystore: 20fb58b992ceb12e0acabe0ad93517039ef18345abf7cf64fc23bf0e69c82eae
        checksum/systemyaml: 68012a86d8423c8e780eea651d90c4194fdf3e494c63ad8b5c62d56e561ddf2e
        checksum/access-config: 510b788263491d21677adcc17cdbe28b084f8abee2a50667ee120fa1cb07c3b0
        checksum/admin-creds: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1030
        fsGroup: 1030
      containers:
        - name: artifactory
          image: releases-docker.jfrog.io/jfrog/artifactory-pro:7.38.10
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW
          command:
            - '/bin/bash'
            - '-c'
            - >
              set -e;
              if [ -d /artifactory_extra_conf ] && [ -d /artifactory_bootstrap ]; then
                echo "Copying bootstrap config from /artifactory_extra_conf to /artifactory_bootstrap";
                cp -Lrfv /artifactory_extra_conf/ /artifactory_bootstrap/;
              fi;
              exec /entrypoint-artifactory.sh
          ports:
            - containerPort: 8082
              name: http
            - containerPort: 8081
              name: http-internal
          volumeMounts:
            - name: artifactory-data
              mountPath: "/var/opt/jfrog/artifactory"
            - name: artifactory-backup
              mountPath: "/var/opt/jfrog/artifactory-backup"
            - name: installer-info
              mountPath: "/artifactory_bootstrap/info/installer-info.json"
              subPath: installer-info.json
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:8091/artifactory/api/v1/system/readiness
            initialDelaySeconds: 10
            failureThreshold: 90
            periodSeconds: 5
            timeoutSeconds: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:8091/artifactory/api/v1/system/liveness
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
            successThreshold: 1


      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: artifactory
                    release: artifactory
      volumes:
        - name: binarystore-xml
          secret:
            secretName: artifactory-binarystore
        - name: migration-scripts
          configMap:
            name: artifactory-migration-scripts
        - name: installer-info
          configMap:
            name: artifactory-installer-info
        - name: artifactory-data
          persistentVolumeClaim:
            claimName: artifactory-data-pvc
        - name: artifactory-backup
          persistentVolumeClaim:
            claimName: artifactory-backup-pvc
        - name: systemyaml
          secret:
            secretName: artifactory-systemyaml
        - name: access-config
          secret:
            secretName: artifactory-access-config
  volumeClaimTemplates:
    - metadata:
        name: artifactory-volume
      spec:
        storageClassName: "nfs-storageclass"
        accessModes: [ "ReadWriteMany" ]
        resources:
          requests:
            storage: 2G
