nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory-artifactory-nginx
  labels:
    app: artifactory
    chart: artifactory-107.38.10
    heritage: Helm
    release: artifactory
    component: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
      release: artifactory
      component: nginx
  template:
    metadata:
      annotations:
        checksum/nginx-conf: 5c72f31a96db993c407a7b1060bf3928d2886749911acd870e4993bb8934fe34
        checksum/nginx-artifactory-conf: b84a9c670c77f59c28ac46fc4ae527f1b6e2763f9cfaad1de7d586a083822a84
      labels:
        app: artifactory
        chart: artifactory-107.38.10
        component: nginx
        heritage: Helm
        release: artifactory
    spec:
      serviceAccountName: default
      securityContext:
        runAsUser: 104
        fsGroup: 107
      containers:
        - name: nginx
          image: releases-docker.jfrog.io/jfrog/nginx-artifactory-pro:7.38.10
          imagePullPolicy: IfNotPresent
          command:
            - 'nginx'
            - '-g'
            - 'daemon off;'
          ports:

            # DEPRECATION NOTE: The following is to maintain support for values pre 1.3.1 and
            # will be cleaned up in a later version
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-artifactory-conf
              mountPath: "/var/opt/jfrog/nginx/conf.d/"
            - name: nginx-volume
              mountPath: "/var/opt/jfrog/nginx"
            - name: ssl-certificates
              mountPath: "/var/opt/jfrog/nginx/ssl"
          resources:
            {}
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:80/router/api/v1/system/readiness
            initialDelaySeconds: 30
            failureThreshold: 90
            periodSeconds: 5
            timeoutSeconds: 5

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:80/router/api/v1/system/readiness
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
            successThreshold: 1

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:80/
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
            successThreshold: 1

      volumes:
        - name: nginx-conf
          configMap:
            name: artifactory-nginx-conf
        - name: nginx-artifactory-conf
          configMap:
            name: artifactory-nginx-artifactory-conf
        - name: nginx-volume
          emptyDir: {}
        - name: ssl-certificates
          secret:
            secretName: artifactory-nginx-certificate
