postgres-deployment-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        type: db
    spec:
      volumes:                        # indicates which PVC are available for this Deployment
        - name: postgres-pv-nfs-volume
          persistentVolumeClaim:
            claimName: postgres-persistent-nfs-volume-claim
      containers:
        - name: postgres
          image: postgres:9.6.19
          ports:
            - containerPort: 5432
          volumeMounts:              # indicates which Volume (from spec.template.spec.volumes) should be used
            - name: postgres-pv-nfs-volume   # name of the Volume
              mountPath: /var/lib/postgresql/data   # path inside the container
