jira-dc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-dc
  labels:
    app: jira-dc
spec:
  ports:
    # port is what this service should serve on, and targetPort is the port in the container.
    - port: 80
      name: jira-main
      targetPort: 8080
      protocol: TCP
    - port: 8888
      name: jira-internal-connector
      targetPort: 8888
      protocol: TCP
    - port: 40001
      name: rmi
      protocol: TCP
      targetPort: 40001
    - port: 40011
      name: remote-object
      protocol: TCP
      targetPort: 40011
  clusterIP: None
  selector:
    app: jira-dc
