nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactory-artifactory-nginx
  labels:
    app: artifactory
    chart: artifactory-107.38.10
    component: nginx
    heritage: Helm
    release: artifactory
spec:
  type: LoadBalancer
  loadBalancerIP: 10.184.0.4
  externalTrafficPolicy: Cluster
  ports:
    # DEPRECATION NOTE: The following is to maintain support for values pre 1.3.0 and
    # will be cleaned up in a later version
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: artifactory
    component: nginx
    release: artifactory
